versions/0.9.0/_sources/refs/_aws-cdk_aws-codepipeline.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"5vCSOmLr4Ed3DVPDveN0jUcNCfqB/Jn7KucP1Yc2G+g="}

@aws-cdk/aws-codepipeline
=========================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.CodePipeline/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.CodePipeline" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.CodePipeline --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.CodePipeline" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/codepipeline/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:codepipeline:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="codepipeline" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>codepipeline</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:codepipeline:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='codepipeline', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-codepipeline/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-codepipeline@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-codepipeline": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-codepipeline@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-codepipeline/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-codepipeline@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-codepipeline": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-codepipeline@0.9.0



.. mdinclude:: ./__aws-cdk_aws-codepipeline.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-codepipeline

CustomActionTypeName
^^^^^^^^^^^^^^^^^^^^

.. py:class:: CustomActionTypeName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.CustomActionTypeName;

      .. code-tab:: javascript

         const { CustomActionTypeName } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { CustomActionTypeName } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

GitHubSource
^^^^^^^^^^^^

.. py:class:: GitHubSource(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.GitHubSource;

      .. code-tab:: javascript

         const { GitHubSource } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { GitHubSource } from '@aws-cdk/aws-codepipeline';



   Source that is provided by a GitHub repository.


   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.SourceAction`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codepipeline.GitHubSourceProps`

GitHubSourceProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: GitHubSourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.GitHubSourceProps;

      .. code-tab:: javascript

         // GitHubSourceProps is an interface

      .. code-tab:: typescript

         import { GitHubSourceProps } from '@aws-cdk/aws-codepipeline';



   Construction properties of the {@link GitHubSource GitHub source action}.


   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.CommonActionProps`


   .. py:attribute:: artifactName

      The name of the source's output artifact. Output artifacts are used by CodePipeline as inputs into other actions.


      :type: string


   .. py:attribute:: oauthToken

      A GitHub OAuth token to use for authentication.  It is recommended to use a `SecretParameter` to obtain the token from the SSM Parameter Store:       const oauth = new SecretParameter(this, 'GitHubOAuthToken', { ssmParameter: 'my-github-token });      new GitHubSource(stage, 'GH' { oauthToken: oauth });


      :type: :py:class:`@aws-cdk/cdk.Secret`


   .. py:attribute:: owner

      The GitHub account/user that owns the repo.


      :type: string


   .. py:attribute:: repo

      The name of the repo, without the username.


      :type: string


   .. py:attribute:: branch

      The branch to use.


      :type: string or undefined


   .. py:attribute:: pollForSourceChanges

      Whether or not AWS CodePipeline should poll for source changes


      :type: boolean or undefined


ManualApprovalAction
^^^^^^^^^^^^^^^^^^^^

.. py:class:: ManualApprovalAction(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.ManualApprovalAction;

      .. code-tab:: javascript

         const { ManualApprovalAction } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { ManualApprovalAction } from '@aws-cdk/aws-codepipeline';



   Manual approval action.


   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.Action`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codepipeline.ManualApprovalActionProps`

ManualApprovalActionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ManualApprovalActionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.ManualApprovalActionProps;

      .. code-tab:: javascript

         // ManualApprovalActionProps is an interface

      .. code-tab:: typescript

         import { ManualApprovalActionProps } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.CommonActionProps`


Pipeline
^^^^^^^^

.. py:class:: Pipeline(parent, name, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.Pipeline;

      .. code-tab:: javascript

         const { Pipeline } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { Pipeline } from '@aws-cdk/aws-codepipeline';



   An AWS CodePipeline pipeline with its associated IAM role and S3 bucket.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/aws-events.IEventRuleTarget`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codepipeline.PipelineProps` or undefined

   .. py:method:: addToRolePolicy(statement)

      Adds a statement to the pipeline role.


      :param statement: 
      :type statement: :py:class:`@aws-cdk/cdk.PolicyStatement`


   .. py:method:: asEventRuleTarget(_ruleArn, _ruleId) -> @aws-cdk/aws-events.EventRuleTargetProps

      Allows the pipeline to be used as a CloudWatch event rule target.  Usage:        const pipeline = new Pipeline(this, 'MyPipeline');       const rule = new EventRule(this, 'MyRule', { schedule: 'rate(1 minute)' });       rule.addTarget(pipeline);


      :param _ruleArn: 
      :type _ruleArn: :py:class:`@aws-cdk/aws-events.RuleArn`
      :param _ruleId: 
      :type _ruleId: string
      :rtype: :py:class:`@aws-cdk/aws-events.EventRuleTargetProps`


   .. py:method:: onStateChange(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      Defines an event rule triggered by the "CodePipeline Pipeline Execution State Change" event emitted from this pipeline.


      :param name: The name of the event rule construct. If you wish to define more than a single onStateChange event, you will need to explicitly specify a name.
      :type name: string
      :param target: Initial target to add to the event rule. You can also add targets and customize target inputs by calling `rule.addTarget(target[,      * options])` after the rule was created.
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: Additional options to pass to the event rule
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: validate() -> string[]

      Validate the pipeline structure  Validation happens according to the rules documented at  https://docs.aws.amazon.com/codepipeline/latest/userguide/reference-pipeline-structure.html#pipeline-requirements


      :rtype: string[]


   .. py:attribute:: artifactBucket

      Bucket used to store output artifacts


      :type: :py:class:`@aws-cdk/aws-s3.BucketRef` *(readonly)*


   .. py:attribute:: pipelineArn

      ARN of this pipeline


      :type: :py:class:`~@aws-cdk/aws-codepipeline.PipelineArn` *(readonly)*


   .. py:attribute:: pipelineName

      The name of the pipeline


      :type: :py:class:`~@aws-cdk/aws-codepipeline.PipelineName` *(readonly)*


   .. py:attribute:: pipelineVersion

      The version of the pipeline


      :type: :py:class:`~@aws-cdk/aws-codepipeline.PipelineVersion` *(readonly)*


   .. py:attribute:: role

      The IAM role AWS CodePipeline will use to perform actions or assume roles for actions with a more specific IAM role.


      :type: :py:class:`@aws-cdk/aws-iam.Role` *(readonly)*


PipelineArn
^^^^^^^^^^^

.. py:class:: PipelineArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.PipelineArn;

      .. code-tab:: javascript

         const { PipelineArn } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { PipelineArn } from '@aws-cdk/aws-codepipeline';



   The ARN of a pipeline


   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PipelineName
^^^^^^^^^^^^

.. py:class:: PipelineName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.PipelineName;

      .. code-tab:: javascript

         const { PipelineName } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { PipelineName } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PipelineProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PipelineProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.PipelineProps;

      .. code-tab:: javascript

         // PipelineProps is an interface

      .. code-tab:: typescript

         import { PipelineProps } from '@aws-cdk/aws-codepipeline';





   .. py:attribute:: artifactBucket

      The S3 bucket used by this Pipeline to store artifacts. If not specified, a new S3 bucket will be created.


      :type: :py:class:`@aws-cdk/aws-s3.BucketRef` or undefined


   .. py:attribute:: pipelineName

      Name of the pipeline. If you don't specify a name,  AWS CloudFormation generates an ID and uses that for the pipeline name.


      :type: string or undefined


   .. py:attribute:: restartExecutionOnUpdate

      Indicates whether to rerun the AWS CodePipeline pipeline after you update it.


      :type: boolean or undefined


PipelineVersion
^^^^^^^^^^^^^^^

.. py:class:: PipelineVersion(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.PipelineVersion;

      .. code-tab:: javascript

         const { PipelineVersion } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { PipelineVersion } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

Stage
^^^^^

.. py:class:: Stage(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.Stage;

      .. code-tab:: javascript

         const { Stage } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { Stage } from '@aws-cdk/aws-codepipeline';



   A Stage in a Pipeline. Stages are added to a Pipeline by constructing a new Stage, and passing the Pipeline it belongs to through the {@link StageProps#pipeline} attribute.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :implements: :py:class:`@aws-cdk/aws-codepipeline-api.IStage`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codepipeline.StageProps`

   .. py:method:: grantPipelineBucketReadWrite(identity)

      Grants read & write permissions to the Pipeline's S3 Bucket to the given Identity.


      :param identity: 
      :type identity: :py:class:`@aws-cdk/aws-iam.IPrincipal`


   .. py:method:: onStateChange(name, [target, [options]]) -> @aws-cdk/aws-events.EventRule

      :param name: 
      :type name: string
      :param target: 
      :type target: :py:class:`@aws-cdk/aws-events.IEventRuleTarget` or undefined
      :param options: 
      :type options: :py:class:`@aws-cdk/aws-events.EventRuleProps` or undefined
      :rtype: :py:class:`@aws-cdk/aws-events.EventRule`


   .. py:method:: render() -> @aws-cdk/aws-codepipeline.cloudformation.PipelineResource.StageDeclarationProperty

      :rtype: :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.StageDeclarationProperty`


   .. py:method:: validate() -> string[]

      This method can be implemented by derived constructs in order to perform validation logic. It is called on all constructs before synthesis.


      :rtype: string[]


   .. py:attribute:: actions

      Get a duplicate of this stage's list of actions.


      :type: :py:class:`@aws-cdk/aws-codepipeline-api.Action`[] *(readonly)*


   .. py:attribute:: name

      The physical, human-readable name of this Pipeline Stage.


      :type: string *(readonly)*


   .. py:attribute:: pipeline

      The Pipeline this Stage is a part of.


      :type: :py:class:`~@aws-cdk/aws-codepipeline.Pipeline` *(readonly)*


   .. py:attribute:: pipelineArn

      The ARN of the Pipeline.


      :type: :py:class:`@aws-cdk/cdk.Arn` *(readonly)*


   .. py:attribute:: pipelineRole

      The service Role of the Pipeline.


      :type: :py:class:`@aws-cdk/aws-iam.Role` *(readonly)*


StageProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: StageProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.StageProps;

      .. code-tab:: javascript

         // StageProps is an interface

      .. code-tab:: typescript

         import { StageProps } from '@aws-cdk/aws-codepipeline';



   The construction properties for {@link Stage}.




   .. py:attribute:: pipeline

      The Pipeline to add the newly created Stage to.


      :type: :py:class:`~@aws-cdk/aws-codepipeline.Pipeline`


WebhookName
^^^^^^^^^^^

.. py:class:: WebhookName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.WebhookName;

      .. code-tab:: javascript

         const { WebhookName } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { WebhookName } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

WebhookUrl
^^^^^^^^^^

.. py:class:: WebhookUrl(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.WebhookUrl;

      .. code-tab:: javascript

         const { WebhookUrl } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { WebhookUrl } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-codepipeline.cloudformation

CustomActionTypeResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CustomActionTypeResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.cloudformation.CustomActionTypeResource;

      .. code-tab:: javascript

         const { cloudformation.CustomActionTypeResource } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { cloudformation.CustomActionTypeResource } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CustomActionTypeResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CustomActionTypeResource``
   :type properties: :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.CustomActionTypeResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-codepipeline.CustomActionTypeName` *(readonly)*

   .. py:class:: ArtifactDetailsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.CustomActionTypeResource.ArtifactDetailsProperty;

         .. code-tab:: javascript

            // cloudformation.CustomActionTypeResource.ArtifactDetailsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CustomActionTypeResource.ArtifactDetailsProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: maximumCount

         ``CustomActionTypeResource.ArtifactDetailsProperty.MaximumCount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-artifactdetails.html#cfn-codepipeline-customactiontype-artifactdetails-maximumcount


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: minimumCount

         ``CustomActionTypeResource.ArtifactDetailsProperty.MinimumCount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-artifactdetails.html#cfn-codepipeline-customactiontype-artifactdetails-minimumcount


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: ConfigurationPropertiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.CustomActionTypeResource.ConfigurationPropertiesProperty;

         .. code-tab:: javascript

            // cloudformation.CustomActionTypeResource.ConfigurationPropertiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CustomActionTypeResource.ConfigurationPropertiesProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: key

         ``CustomActionTypeResource.ConfigurationPropertiesProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-configurationproperties.html#cfn-codepipeline-customactiontype-configurationproperties-key


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: name

         ``CustomActionTypeResource.ConfigurationPropertiesProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-configurationproperties.html#cfn-codepipeline-customactiontype-configurationproperties-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: required

         ``CustomActionTypeResource.ConfigurationPropertiesProperty.Required``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-configurationproperties.html#cfn-codepipeline-customactiontype-configurationproperties-required


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: secret

         ``CustomActionTypeResource.ConfigurationPropertiesProperty.Secret``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-configurationproperties.html#cfn-codepipeline-customactiontype-configurationproperties-secret


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: description

         ``CustomActionTypeResource.ConfigurationPropertiesProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-configurationproperties.html#cfn-codepipeline-customactiontype-configurationproperties-description


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: queryable

         ``CustomActionTypeResource.ConfigurationPropertiesProperty.Queryable``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-configurationproperties.html#cfn-codepipeline-customactiontype-configurationproperties-queryable


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: type

         ``CustomActionTypeResource.ConfigurationPropertiesProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-configurationproperties.html#cfn-codepipeline-customactiontype-configurationproperties-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: SettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.CustomActionTypeResource.SettingsProperty;

         .. code-tab:: javascript

            // cloudformation.CustomActionTypeResource.SettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CustomActionTypeResource.SettingsProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: entityUrlTemplate

         ``CustomActionTypeResource.SettingsProperty.EntityUrlTemplate``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-settings.html#cfn-codepipeline-customactiontype-settings-entityurltemplate


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: executionUrlTemplate

         ``CustomActionTypeResource.SettingsProperty.ExecutionUrlTemplate``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-settings.html#cfn-codepipeline-customactiontype-settings-executionurltemplate


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: revisionUrlTemplate

         ``CustomActionTypeResource.SettingsProperty.RevisionUrlTemplate``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-settings.html#cfn-codepipeline-customactiontype-settings-revisionurltemplate


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: thirdPartyConfigurationUrl

         ``CustomActionTypeResource.SettingsProperty.ThirdPartyConfigurationUrl``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-customactiontype-settings.html#cfn-codepipeline-customactiontype-settings-thirdpartyconfigurationurl


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



CustomActionTypeResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CustomActionTypeResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.cloudformation.CustomActionTypeResourceProps;

      .. code-tab:: javascript

         // cloudformation.CustomActionTypeResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CustomActionTypeResourceProps } from '@aws-cdk/aws-codepipeline';





   .. py:attribute:: category

      ``AWS::CodePipeline::CustomActionType.Category``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-customactiontype.html#cfn-codepipeline-customactiontype-category


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: inputArtifactDetails

      ``AWS::CodePipeline::CustomActionType.InputArtifactDetails``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-customactiontype.html#cfn-codepipeline-customactiontype-inputartifactdetails


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.CustomActionTypeResource.ArtifactDetailsProperty`


   .. py:attribute:: outputArtifactDetails

      ``AWS::CodePipeline::CustomActionType.OutputArtifactDetails``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-customactiontype.html#cfn-codepipeline-customactiontype-outputartifactdetails


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.CustomActionTypeResource.ArtifactDetailsProperty`


   .. py:attribute:: provider

      ``AWS::CodePipeline::CustomActionType.Provider``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-customactiontype.html#cfn-codepipeline-customactiontype-provider


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: configurationProperties

      ``AWS::CodePipeline::CustomActionType.ConfigurationProperties``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-customactiontype.html#cfn-codepipeline-customactiontype-configurationproperties


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.CustomActionTypeResource.ConfigurationPropertiesProperty`)[] or undefined


   .. py:attribute:: settings

      ``AWS::CodePipeline::CustomActionType.Settings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-customactiontype.html#cfn-codepipeline-customactiontype-settings


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.CustomActionTypeResource.SettingsProperty` or undefined


   .. py:attribute:: version

      ``AWS::CodePipeline::CustomActionType.Version``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-customactiontype.html#cfn-codepipeline-customactiontype-version


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


PipelineResource
~~~~~~~~~~~~~~~~

.. py:class:: PipelineResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource;

      .. code-tab:: javascript

         const { cloudformation.PipelineResource } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { cloudformation.PipelineResource } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PipelineResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PipelineResource``
   :type properties: :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: pipelineVersion

      :type: :py:class:`~@aws-cdk/aws-codepipeline.PipelineVersion` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-codepipeline.PipelineName` *(readonly)*

   .. py:class:: ActionDeclarationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.ActionDeclarationProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.ActionDeclarationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.ActionDeclarationProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: actionTypeId

         ``PipelineResource.ActionDeclarationProperty.ActionTypeId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions.html#cfn-codepipeline-pipeline-stages-actions-actiontypeid


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.ActionTypeIdProperty`


      .. py:attribute:: name

         ``PipelineResource.ActionDeclarationProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions.html#cfn-codepipeline-pipeline-stages-actions-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: configuration

         ``PipelineResource.ActionDeclarationProperty.Configuration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions.html#cfn-codepipeline-pipeline-stages-actions-configuration


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: inputArtifacts

         ``PipelineResource.ActionDeclarationProperty.InputArtifacts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions.html#cfn-codepipeline-pipeline-stages-actions-inputartifacts


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.InputArtifactProperty`)[] or undefined


      .. py:attribute:: outputArtifacts

         ``PipelineResource.ActionDeclarationProperty.OutputArtifacts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions.html#cfn-codepipeline-pipeline-stages-actions-outputartifacts


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.OutputArtifactProperty`)[] or undefined


      .. py:attribute:: roleArn

         ``PipelineResource.ActionDeclarationProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions.html#cfn-codepipeline-pipeline-stages-actions-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: runOrder

         ``PipelineResource.ActionDeclarationProperty.RunOrder``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions.html#cfn-codepipeline-pipeline-stages-actions-runorder


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ActionTypeIdProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.ActionTypeIdProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.ActionTypeIdProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.ActionTypeIdProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: category

         ``PipelineResource.ActionTypeIdProperty.Category``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions-actiontypeid.html#cfn-codepipeline-pipeline-stages-actions-actiontypeid-category


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: owner

         ``PipelineResource.ActionTypeIdProperty.Owner``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions-actiontypeid.html#cfn-codepipeline-pipeline-stages-actions-actiontypeid-owner


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: provider

         ``PipelineResource.ActionTypeIdProperty.Provider``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions-actiontypeid.html#cfn-codepipeline-pipeline-stages-actions-actiontypeid-provider


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: version

         ``PipelineResource.ActionTypeIdProperty.Version``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions-actiontypeid.html#cfn-codepipeline-pipeline-stages-actions-actiontypeid-version


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: ArtifactStoreProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.ArtifactStoreProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.ArtifactStoreProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.ArtifactStoreProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: location

         ``PipelineResource.ArtifactStoreProperty.Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-artifactstore.html#cfn-codepipeline-pipeline-artifactstore-location


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: type

         ``PipelineResource.ArtifactStoreProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-artifactstore.html#cfn-codepipeline-pipeline-artifactstore-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: encryptionKey

         ``PipelineResource.ArtifactStoreProperty.EncryptionKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-artifactstore.html#cfn-codepipeline-pipeline-artifactstore-encryptionkey


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.EncryptionKeyProperty` or undefined


   .. py:class:: BlockerDeclarationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.BlockerDeclarationProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.BlockerDeclarationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.BlockerDeclarationProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: name

         ``PipelineResource.BlockerDeclarationProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-blockers.html#cfn-codepipeline-pipeline-stages-blockers-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: type

         ``PipelineResource.BlockerDeclarationProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-blockers.html#cfn-codepipeline-pipeline-stages-blockers-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: EncryptionKeyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.EncryptionKeyProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.EncryptionKeyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.EncryptionKeyProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: id

         ``PipelineResource.EncryptionKeyProperty.Id``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-artifactstore-encryptionkey.html#cfn-codepipeline-pipeline-artifactstore-encryptionkey-id


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: type

         ``PipelineResource.EncryptionKeyProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-artifactstore-encryptionkey.html#cfn-codepipeline-pipeline-artifactstore-encryptionkey-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: InputArtifactProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.InputArtifactProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.InputArtifactProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.InputArtifactProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: name

         ``PipelineResource.InputArtifactProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions-inputartifacts.html#cfn-codepipeline-pipeline-stages-actions-inputartifacts-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: OutputArtifactProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.OutputArtifactProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.OutputArtifactProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.OutputArtifactProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: name

         ``PipelineResource.OutputArtifactProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages-actions-outputartifacts.html#cfn-codepipeline-pipeline-stages-actions-outputartifacts-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: StageDeclarationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.StageDeclarationProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.StageDeclarationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.StageDeclarationProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: actions

         ``PipelineResource.StageDeclarationProperty.Actions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages.html#cfn-codepipeline-pipeline-stages-actions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.ActionDeclarationProperty`)[]


      .. py:attribute:: name

         ``PipelineResource.StageDeclarationProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages.html#cfn-codepipeline-pipeline-stages-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: blockers

         ``PipelineResource.StageDeclarationProperty.Blockers``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-stages.html#cfn-codepipeline-pipeline-stages-blockers


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.BlockerDeclarationProperty`)[] or undefined


   .. py:class:: StageTransitionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResource.StageTransitionProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.StageTransitionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.StageTransitionProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: reason

         ``PipelineResource.StageTransitionProperty.Reason``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-disableinboundstagetransitions.html#cfn-codepipeline-pipeline-disableinboundstagetransitions-reason


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: stageName

         ``PipelineResource.StageTransitionProperty.StageName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-pipeline-disableinboundstagetransitions.html#cfn-codepipeline-pipeline-disableinboundstagetransitions-stagename


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



PipelineResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PipelineResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.cloudformation.PipelineResourceProps;

      .. code-tab:: javascript

         // cloudformation.PipelineResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PipelineResourceProps } from '@aws-cdk/aws-codepipeline';





   .. py:attribute:: artifactStore

      ``AWS::CodePipeline::Pipeline.ArtifactStore``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-pipeline.html#cfn-codepipeline-pipeline-artifactstore


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.ArtifactStoreProperty`


   .. py:attribute:: roleArn

      ``AWS::CodePipeline::Pipeline.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-pipeline.html#cfn-codepipeline-pipeline-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: stages

      ``AWS::CodePipeline::Pipeline.Stages``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-pipeline.html#cfn-codepipeline-pipeline-stages


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.StageDeclarationProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


   .. py:attribute:: disableInboundStageTransitions

      ``AWS::CodePipeline::Pipeline.DisableInboundStageTransitions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-pipeline.html#cfn-codepipeline-pipeline-disableinboundstagetransitions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.PipelineResource.StageTransitionProperty`)[] or undefined


   .. py:attribute:: pipelineName

      ``AWS::CodePipeline::Pipeline.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-pipeline.html#cfn-codepipeline-pipeline-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: restartExecutionOnUpdate

      ``AWS::CodePipeline::Pipeline.RestartExecutionOnUpdate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-pipeline.html#cfn-codepipeline-pipeline-restartexecutiononupdate


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


WebhookResource
~~~~~~~~~~~~~~~

.. py:class:: WebhookResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.cloudformation.WebhookResource;

      .. code-tab:: javascript

         const { cloudformation.WebhookResource } = require('@aws-cdk/aws-codepipeline');

      .. code-tab:: typescript

         import { cloudformation.WebhookResource } from '@aws-cdk/aws-codepipeline';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WebhookResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``WebhookResource``
   :type properties: :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.WebhookResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-codepipeline.WebhookName` *(readonly)*


   .. py:attribute:: webhookUrl

      :type: :py:class:`~@aws-cdk/aws-codepipeline.WebhookUrl` *(readonly)*

   .. py:class:: WebhookAuthConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.WebhookResource.WebhookAuthConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.WebhookResource.WebhookAuthConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.WebhookResource.WebhookAuthConfigurationProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: allowedIpRange

         ``WebhookResource.WebhookAuthConfigurationProperty.AllowedIPRange``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-webhook-webhookauthconfiguration.html#cfn-codepipeline-webhook-webhookauthconfiguration-allowediprange


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: secretToken

         ``WebhookResource.WebhookAuthConfigurationProperty.SecretToken``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-webhook-webhookauthconfiguration.html#cfn-codepipeline-webhook-webhookauthconfiguration-secrettoken


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: WebhookFilterRuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodePipeline;

         .. code-tab:: java

            import software.amazon.awscdk.services.codepipeline.cloudformation.WebhookResource.WebhookFilterRuleProperty;

         .. code-tab:: javascript

            // cloudformation.WebhookResource.WebhookFilterRuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.WebhookResource.WebhookFilterRuleProperty } from '@aws-cdk/aws-codepipeline';





      .. py:attribute:: jsonPath

         ``WebhookResource.WebhookFilterRuleProperty.JsonPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-webhook-webhookfilterrule.html#cfn-codepipeline-webhook-webhookfilterrule-jsonpath


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: matchEquals

         ``WebhookResource.WebhookFilterRuleProperty.MatchEquals``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codepipeline-webhook-webhookfilterrule.html#cfn-codepipeline-webhook-webhookfilterrule-matchequals


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



WebhookResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WebhookResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodePipeline;

      .. code-tab:: java

         import software.amazon.awscdk.services.codepipeline.cloudformation.WebhookResourceProps;

      .. code-tab:: javascript

         // cloudformation.WebhookResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.WebhookResourceProps } from '@aws-cdk/aws-codepipeline';





   .. py:attribute:: authentication

      ``AWS::CodePipeline::Webhook.Authentication``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-authentication


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: authenticationConfiguration

      ``AWS::CodePipeline::Webhook.AuthenticationConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-authenticationconfiguration


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.WebhookResource.WebhookAuthConfigurationProperty`


   .. py:attribute:: filters

      ``AWS::CodePipeline::Webhook.Filters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-filters


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codepipeline.cloudformation.WebhookResource.WebhookFilterRuleProperty`)[]


   .. py:attribute:: targetAction

      ``AWS::CodePipeline::Webhook.TargetAction``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-targetaction


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: targetPipeline

      ``AWS::CodePipeline::Webhook.TargetPipeline``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-targetpipeline


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: targetPipelineVersion

      ``AWS::CodePipeline::Webhook.TargetPipelineVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-targetpipelineversion


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: registerWithThirdParty

      ``AWS::CodePipeline::Webhook.RegisterWithThirdParty``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-registerwiththirdparty


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: webhookName

      ``AWS::CodePipeline::Webhook.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codepipeline-webhook.html#cfn-codepipeline-webhook-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-codepipeline

